force-app/main/default/objects/Zoom_Meeting__c/Zoom_Meeting__c.object-meta.xml
<CustomObject>
    <label>Zoom Meeting</label>
    <nameField>
        <displayFormat>ZMC-{000000000}</displayFormat>
        <label>Zoom Meeting Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>