force-app/main/default/objects/Zoom_Meeting__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>