force-app/main/default/objects/Zoom_Meeting__c/fields/Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Minutes__c</fullName>
    <label>Duration in Minutes</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>