force-app/main/default/objects/Zoom_Meeting__c/fields/Invitees_Information__c.field-meta.xml
<CustomField>
    <fullName>Invitees_Information__c</fullName>
    <label>Invitees Information</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>