force-app/main/default/objects/Zoom_Meeting__c/fields/Join_URL__c.field-meta.xml
<CustomField>
    <fullName>Join_URL__c</fullName>
    <label>Join URL</label>
    <type>Url</type>
</CustomField>