force-app/main/default/objects/Zoom_Meeting__c/fields/Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Id__c</fullName>
    <label>Meeting Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>