force-app/main/default/objects/Zoom_Meeting__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>An instant meeting.</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>A scheduled meeting.</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>A recurring meeting with no fixed time.</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>A recurring meeting with a fixed time.</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>A screen share-only meeting.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>