force-app/main/default/objects/Zoom_Meeting__c/fields/Schedule_For__c.field-meta.xml
<CustomField>
    <fullName>Schedule_For__c</fullName>
    <label>Schedule For</label>
    <type>Email</type>
</CustomField>