force-app/main/default/objects/Zoom_Meeting__c/fields/Start_URL__c.field-meta.xml
<CustomField>
    <fullName>Start_URL__c</fullName>
    <label>Start URL</label>
    <type>Url</type>
</CustomField>