force-app/main/default/objects/Zoom_Meeting__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa/Algiers</fullName>
            </value>
            <value>
                <fullName>Africa/Bangui</fullName>
            </value>
            <value>
                <fullName>Africa/Cairo</fullName>
            </value>
            <value>
                <fullName>Africa/Casablanca</fullName>
            </value>
            <value>
                <fullName>Africa/Djibouti</fullName>
            </value>
            <value>
                <fullName>Africa/Harare</fullName>
            </value>
            <value>
                <fullName>Africa/Johannesburg</fullName>
            </value>
            <value>
                <fullName>Africa/Khartoum</fullName>
            </value>
            <value>
                <fullName>Africa/Mogadishu</fullName>
            </value>
            <value>
                <fullName>Africa/Nairobi</fullName>
            </value>
            <value>
                <fullName>Africa/Nouakchott</fullName>
            </value>
            <value>
                <fullName>Africa/Tripoli</fullName>
            </value>
            <value>
                <fullName>Africa/Tunis</fullName>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>America/Araguaina</fullName>
            </value>
            <value>
                <fullName>America/Argentina/Buenos_Aires</fullName>
            </value>
            <value>
                <fullName>America/Bogota</fullName>
            </value>
            <value>
                <fullName>America/Caracas</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Costa_Rica</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/Edmonton</fullName>
            </value>
            <value>
                <fullName>America/El_Salvador</fullName>
            </value>
            <value>
                <fullName>America/Godthab</fullName>
            </value>
            <value>
                <fullName>America/Guatemala</fullName>
            </value>
            <value>
                <fullName>America/Halifax</fullName>
            </value>
            <value>
                <fullName>America/Indianapolis</fullName>
            </value>
            <value>
                <fullName>America/Lima</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Managua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>